# Wgpu-Template

./: .gitignore  Cargo.toml  bind groups.txt  changelog.md  good resources.txt  log.txt  readme.md  roadmap.txt
data/: default engine config.hjson  engine config.hjson
data/shaders/: color correction.wgsl  example model.wgsl  example.wgsl  main.wgsl  models.wgsl  shadow caster.wgsl  shadowmap.wgsl  skybox.wgsl  test_model.wgsl
src/: data.rs  handle_event.rs  load.rs  main.rs  materials_storage_utils.rs  render.rs  update.rs  update_gpu_buffers.rs  utils.rs  wgpu_integration.rs
src/load/: load_assets.rs  load_bindings.rs  load_generic_bind_layouts.rs  load_layouts.rs  load_pipelines.rs  load_texture_bind_layouts.rs  mod.rs
