[package]
name = "wgpu-template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
async-std = "1.12.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
env_logger = "0.11.3"
glam = "0.27.0"
image = "0.25.1"
intel_tex_2 = "0.4.0"
lazy_static = "1.4.0"
log = "0.4.21"
serde = "1.0.199"
serde-hjson = "0.9.1"
tobj = "4.0.2"
wgpu = "0.20.0"
winit = "0.30.0"



[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
#lto = true
#codegen-units = 1
#incremental = false
#debug = false
debug = true
