[package]
name = "wgpu-template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-std = "1.13.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
env_logger = "0.11.6"
glam = "0.29.2"
image = "0.25.5"
intel_tex_2 = "0.4.0"
lazy_static = "1.5.0"
log = "0.4.22"
rayon = "1.10.0"
serde = "1.0.216"
serde-hjson = "1.1.0"
tobj = "4.0.2"
wgpu = "23.0.1"
winit = "0.30.6"



[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
#lto = true
#codegen-units = 1
#incremental = false
#debug = false
debug = true # for flamegraph
