[package]
name = "wgpu-template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
smol = "2.0.2"
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
glam = "0.30.10"
image = "0.25.9"
intel_tex_2 = "0.5.0"
lazy_static = "1.5.0"
log = "0.4.29"
rayon = "1.11.0"
serde = "1.0.228"
serde-hjson = "1.1.0"
tobj = "4.0.3"
wgpu = "28.0.0"
winit = "0.30.12"



[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
#lto = true
#codegen-units = 1
#incremental = false
#debug = false
debug = true # for flamegraph
